--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -379,6 +379,8 @@
     <string name="create_smart_categories">Classify media and create smart categories</string>
     <string name="info_create_smart_categories">The classification of images is performed by an intelligent algorithm directly on this device. No data is sent to any online server. The intelligent algorithm assigns a category to each media based on the objects it recognizes.</string>
     <string name="info">Information</string>
+    <string name="slideshow_pause">Pause</string>
+    <string name="slideshow_play">Play</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
